--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "license": "EULA",
     "homepage": "",
     "description": "Blog for Magento. Shows posts with comments. Comments can be auto approved or moderated by admin. Categories. Plus much more.",
+    "extra": { "package-xml": "package.xml" },
     "authors": [
         {
             "name": "AW_Core_Team",
